Fix Product card select button mobile width.

--- a/client/a8c-for-agencies/sections/marketplace/products-overview/product-card/style.scss
+++ b/client/a8c-for-agencies/sections/marketplace/products-overview/product-card/style.scss
@@ -46,17 +46,6 @@
 	box-shadow: inset 0 0 0 1px var(--color-surface), 0 0 0 var(--wp-admin-border-width-focus) var(--color-accent);
 }
 
-button.product-card__select-button {
-	border-radius: 4px;
-	padding: 7px 12px;
-	font-size: 0.75rem;
-	font-weight: 600;
-	line-height: 1.1;
-	max-height: 36px;
-	min-width: 82px;
-	max-width: 82px;
-}
-
 @mixin product-card-block__details {
 	flex-wrap: wrap;
 	align-items: flex-start;
@@ -91,23 +80,36 @@ button.product-card__select-button {
 }
 
 .product-card__main {
-	display: flex;
+	display: block;
 	width: 100%;
-	justify-content: space-between;
-	gap: 0.5rem;
 
-	@include breakpoint-deprecated( "<660px" ) {
-		display: block;
-
-		.product-card__select-button {
-			margin-block-start: 0.5rem;
-			width: 100%;
-			justify-content: center;
-			text-align: center;
-			font-size: 1rem;
-		}
+	@include breakpoint-deprecated( ">660px" ) {
+		display: flex;
+		justify-content: space-between;
+		gap: 0.5rem;
 	}
 }
+
+.product-card__select-button {
+	display: block;
+	margin-block-start: 0.5rem;
+	max-width: 100%;
+	width: 100%;
+	justify-content: center;
+	text-align: center;
+	font-size: 1rem;
+
+	@include breakpoint-deprecated( ">660px" ) {
+		padding: 7px 12px;
+		font-size: 0.75rem;
+		font-weight: 600;
+		line-height: 1.1;
+		max-height: 36px;
+		min-width: 82px;
+		max-width: 82px;
+	}
+}
+
 
 .product-card__heading {
 	display: flex;
